# claudechic

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  dashboard.py  install.ps1  install.sh  pyproject.toml
.ai-docs/: analytics.md
.claudechic/: config.yaml
.github/workflows/: no-project-team-additions-on-main.yml  release.yml  test.yml
.project_team/abast_accf332_sync/: SPEC.md  SPEC_APPENDIX.md  STATUS.md  historian_findings.md  leadership_findings.md  spec_engine_seam.md  spec_guardrails_seam.md  spec_ui_surface.md  userprompt.md  userprompt_testing.md
.project_team/broadcast_test/: STATUS.md  userprompt.md
.project_team/compact_test/: STATUS.md  userprompt.md
.project_team/diff_review_ux/: .SPEC_APPENDIX.md.swp  SPEC_APPENDIX.md  STATUS.md  uidesigner_design_v4.md  userprompt.md  userprompt_testing.md
.project_team/guardrail_test/: test_file.md
.project_team/independent_chic/: RESEARCH.md  RESEARCH_abast_state.md  SPEC.md  SPEC_APPENDIX.md  STATUS.md  alignment_audit.md  axis_artifact_dirs.md  axis_artifact_dirs_appendix.md  axis_awareness_delivery.md  axis_awareness_delivery_appendix.md  axis_boundary_test.md  axis_boundary_test_appendix.md  axis_loader_resolution.md  axis_loader_resolution_appendix.md  composability_eval.md  e2e_walkthrough.md  fresh_review_composability.md  fresh_review_skeptic.md  fresh_review_terminology.md  fresh_review_useralignment.md  risk_evaluation.md  skeptic_trim_proposals.md  terminology_glossary.md  ui_design.md  ui_design_appendix.md  userprompt.md  vision.md
.project_team/issue_23_path_eval/: Appendix.md  RECOMMENDATION.md  SPEC.md  STATUS.md  abast_executive_summary.md  alignment_audit.md  composability_eval.md  fork_diff_report.md  risk_evaluation.md  terminology_glossary.md  userprompt.md
.project_team/project_team_context_review/: SPEC_bypass.md  ui_settings_final.md  ui_settings_review.md  userprompt.md  userprompt_testing.md
.project_team/project_team_context_review_no_auto/: CHANGES_DIAGRAM.md  EXPERIMENT_MANIFEST.md  SPEC_APPENDIX_bypass.md  SPEC_bypass.md  STATUS.md  TEST_SPECIFICATION.md  leadership_findings.md  userprompt_testing.md
.project_team/pyright_cleanup/: STATUS.md  TESTING_RESULTS.md  (+2 more)
claudechic/: __init__.py  __main__.py  _patches.py  agent.py  agent_manager.py  analytics.py  app.py  awareness_install.py  checkpoints.py  chicsession_cmd.py  chicsessions.py  cluster.py  commands.py  compact.py  config.py  enums.py  errors.py  fast_mode_settings.json  file_index.py  filters.py  formatting.py  help_data.py  mcp.py  messages.py  onboarding.py  protocols.py  remote.py  sampling.py  sessions.py  shell_complete.py  shell_runner.py  styles.tcss  tasks.py  theme.py  usage.py
docs/: compaction.md  configuration.md  privacy.md
hints/: __init__.py  __main__.py  _engine.py  _state.py  _types.py  hints.py
mcp_tools/: README.md  _cluster.py  lsf.py  lsf.yaml
patches/: 0011-fix-textarea-undo-cursor-crash.patch
tests/: conftest.py  manual_diff.md  test_advance_check_executor.py  test_agent_command_output.py  test_agent_manager_permissions.py  test_agent_permission.py  test_agent_role_identity.py  test_app_ui.py  test_artifact_dir.py  test_artifact_dir_e2e.py  test_autocomplete.py  test_awareness_install.py  test_awareness_sdk_e2e.py  test_bug12_guardrails_detect_field.py  test_bug14_sessions_project_key.py  test_bug16_sessions_encoding.py  test_checks.py  test_checks_tier_aware.py  test_chicsession_actions.py  test_chicsessions.py  test_cluster.py  test_cluster_config_tier_resolution.py  test_cluster_dispatch_missing_backend.py  test_cluster_readiness.py  test_coalesced_delivery.py  test_computer_info_modal.py  test_config.py  test_config_integration.py  test_constraints_block.py  test_constraints_decomposition.py  test_copyable_fence.py  test_crystal_sweep.py  test_default_permission_mode.py  test_diff.py  test_diff_dir_strip.py  test_diff_preview.py  test_diff_workflows.py  test_disabled_screens.py  test_effort_cycling.py  test_encoding_static.py  (+49 more)
(+325 files in other folders)
